--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "netflix",
+  "homepage": "https://yaunghein.github.io/y-netflix",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,11 +19,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
