--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "netflix",
+  "homepage": "https://yaunghein.github.io/y-netflix",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
