--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netflix",
+  "name": "y-netflix",
   "homepage": "https://yaunghein.github.io/y-netflix",
   "version": "0.1.0",
   "private": true,
